highscore/ci/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: highscore
  name: highscore
  namespace: arcade
spec:
  ports:
  - port: 8080
  selector:
    app: highscore
