highscore/ci/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: highscore
  name: highscore
  namespace: arcade
spec:
  host: arcade.apps-crc.testing
  path: /highscore
  port:
    targetPort: 8080
  to:
    kind: Service
    name: highscore
    weight: 100
  wildcardPolicy: None
